# windows-diagnostic-mcp

./: .gitignore  LICENSE  README.md
apps/mcp/: manifest.json  pyproject.toml
apps/mcp/src/: Dockerfile  requirements.txt  run.ps1
apps/mcp/src/windows_diagnostic_mcp/: __main__.py  config.py  server.py
apps/mcp/src/windows_diagnostic_mcp/routes/: health.py
apps/mcp/src/windows_diagnostic_mcp/tools/: hardware_tools.py  network_tools.py  os_tools.py  performance_tools.py  security_tools.py
apps/mcp/src/windows_diagnostic_mcp/utils/: command_runner.py  tool_checker.py
apps/mcp/tests/: test_mcp_client.py
