[project]
name = "windows-diagnostic-mcp"
version = "0.1.0"
description = "Windows system diagnostics MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.23.3",
    "fastmcp>=2.13.0",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "pydantic>=2.12",
    "pydantic-settings>=2.11",
    "python-dotenv>=1.2",
]

[project.scripts]
windows-diagnostic-mcp = "windows_diagnostic_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/windows_diagnostic_mcp"]
